openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z4.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

enum Color { red, green, blue }

@interface Colored {
    Color value() default Color.teal;
}
